# RamificationGroup

./: .gitignore  Main.lean  Makefile  README.md  RamificationGroup.lean  flake.nix  lake-manifest.json  lakefile.lean  lean-toolchain  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: build.yaml  build_blueprint.yml  build_project.yml
Memo/: DiscreteValuedField.md  GeneralityOfDefinitions.md  Instances.md  TODO.txt  ValuationTopology.md  ValuedOrValuation.md
RamificationGroup/: .lean  Basic.lean  DecompositionGroup.lean  Herbramd_bij.lean  Herbrand.lean  HerbrandFunction.lean  Herbrand_aux.lean  LowerNumbering.lean  LowerNumbering_prop3.lean  UpperNumbering.lean  Upper_aux.lean  Upper_phiComp.lean  draft.lean  second_class.lean  trush.lean  upper_lemma3.lean
RamificationGroup/Definition/: CompleteValuationRing  CompleteValuationRing.lean  ExtensionOfValuation.lean  Herbrand.lean  LowerNumbering.lean  MissingPiecesOfMathlib.lean
RamificationGroup/DiscretelyValued/: Basic.lean
RamificationGroup/ForMathlib/: Henselian.lean  Unknow.lean
RamificationGroup/HerbrandFunction/: Basic.lean  Bijection.lean  Psi.lean  SumInf.lean
RamificationGroup/LocalField/: Hom.lean
RamificationGroup/LowerNumbering/: Basic.lean  prop_3.lean
RamificationGroup/Preliminary/: DiscreteValuation.lean  QuotientAlgebra.lean
RamificationGroup/Unused/: Basic.lean  Discrete.lean  DiscreteValuation.lean  Integer.lean  MissingPiecesOfMathlib.lean  RamificationIndex.lean  Test.lean  ValuePreserved.lean
blueprint/: blueprint_auto.py  tasks.py  template.tex
(+81 files in other folders)
